Handle getBlock Log and Invalid Request
Signed-off-by: Nana Essilfie-Conduah <nana@swirldslabs.com>